<resources>
    <string name="app_name">Cribb</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="action_reset">Reset</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="email">dli123@syr.edu</string>
    <string name="password">password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>
    <string name="nav_location">location</string>
    <string name="nav_home">home</string>
    <string name="nav_person">person</string>
    <string name="address">address</string>
    <string name="landlord">landlord</string>
    <string name="rent">$999/month</string>
    <string name="overall_rating">5.0</string>
    <string name="manage_rating">5.0</string>
    <string name="location_rating">5.0</string>
    <string name="amenities_rating">5.0</string>
    <string name="change_overall_rating">5.0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
