<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/mapFrag">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cribb.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.cribb.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.cribb.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/mapFrag"
        android:name="com.example.cribb.MapFragment"
        android:label="Cribb"
        tools:layout="@layout/fragment_map" >
        <action
            android:id="@+id/action_mapFrag_to_displayListingFragment2"
            app:destination="@id/displayListingFragment2" />
    </fragment>
    <fragment
        android:id="@+id/displayListingFragment2"
        android:name="com.example.cribb.DisplayListingFragment"
        android:label="fragment_display_listing"
        tools:layout="@layout/fragment_display_listing" >
        <argument
            android:name="dynamicAddress"
            android:defaultValue="string" />
    </fragment>
</navigation>