<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".DisplayListingFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" android:layout_alignParentLeft="true">

        <TextView
                android:text="@string/address"
                android:layout_width="350dp"
                android:layout_height="52dp" android:id="@+id/address_passed" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintVertical_bias="0.028" android:gravity="center"/>
        <TextView
                android:text="@string/landlord"
                android:layout_width="383dp"
                android:layout_height="32dp"
                android:id="@+id/landlord"
                android:layout_below="@id/address_passed" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintVertical_bias="0.114" android:gravity="center"/>
        <EditText
                android:layout_width="70dp"
                android:layout_height="47dp"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/overall_avg_num"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.193"
                app:layout_constraintVertical_bias="0.202" android:text="5.0" android:gravity="center|left"/>
        <TextView
                android:layout_width="170dp"
                android:layout_height="71dp"
                android:id="@+id/price"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/landlord" app:layout_constraintHorizontal_bias="0.581"
                app:layout_constraintVertical_bias="0.019" app:layout_constraintStart_toEndOf="@+id/overall_avg_num"
                android:text="@string/rent" android:gravity="center"/>
        <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleSmall"
                android:id="@+id/ratingBar" android:numStars="5"
                android:rating="5" android:max="5" android:isIndicator="true"
                app:layout_constraintTop_toBottomOf="@+id/overall_avg_num" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/price"
                android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.519" app:layout_constraintVertical_bias="0.0"/>
        <TextView
                android:text="Amenities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/amenities_text" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/reviews_scrollView"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar"
                app:layout_constraintStart_toEndOf="@+id/location_text" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.639"
                app:layout_constraintVertical_bias="0.123"/>
        <TextView
                android:text="Location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/location_text"
                app:layout_constraintBottom_toTopOf="@+id/reviews_scrollView"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar" app:layout_constraintVertical_bias="0.123"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.499"/>
        <TextView
                android:text="Management"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/manage_text" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/reviews_scrollView" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="48dp" android:layout_marginStart="48dp"
                app:layout_constraintVertical_bias="0.123"/>
        <EditText
                android:layout_width="84dp"
                android:layout_height="48dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/manage_avg_num"
                android:text="@string/manage_rating" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/manage_text" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/reviews_scrollView" app:layout_constraintVertical_bias="0.0"
                android:layout_marginStart="48dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="32dp"/>
        <EditText
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/location_avg_num" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/location_text"
                android:text="@string/location_rating" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
        />
        <EditText
                android:layout_width="78dp"
                android:layout_height="48dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/amenities_avg_num" android:text="@string/amenities_rating"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/amenities_text" android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/reviews_scrollView"
                app:layout_constraintVertical_bias="0.0"/>
        <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/reviews_scrollView"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@id/space">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical" android:id="@+id/LinearLayout"/>
        </ScrollView>
        <Space
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_avg_num" android:id="@+id/space"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>